--- a/public/ss/base/_typography.scss
+++ b/public/ss/base/_typography.scss
@@ -5,7 +5,7 @@ html {
   font-size: 62.5%;
   @media screen and (min-width: $bp-sm) { font-size: 65%; }
   @media screen and (min-width: $bp-md) { font-size: 70%; }
-  @media screen and (min-width: $bp-lg) { font-size: 80; }
+  @media screen and (min-width: $bp-lg) { font-size: 80%; }
   @media screen and (min-width: $bp-xl) { font-size: 92.5%; }
 }
 
